kubernetes/apps/auth/authentik/networkpolicys/worker/auth-authentik-worker-allow-eg-to-db-pg-authentik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-authentik-worker-allow-eg-to-db-pg-authentik
  namespace: auth
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              cnpg.io/cluster: pg-authentik
      ports:
        - protocol: TCP
          port: 5432
