kubernetes/apps/auth/authentik/networkpolicys/worker/auth-authentik-worker-allow-eg-to-k8s-api.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: auth-authentik-worker-allow-eg-to-k8s-api
  namespace: auth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
