kubernetes/apps/auth/authentik/networkpolicys/worker/auth-authentik-worker-allow-eg-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: auth-authentik-worker-allow-eg-to-world
  namespace: auth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - protocol: TCP
              port: "443"
