kubernetes/apps/auth/authentik/networkpolicys/worker/auth-authentik-worker-allow-ig-from-envoy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-authentik-worker-allow-ig-from-envoy-gateway
  namespace: auth
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
        podSelector:
          matchLabels:
            app.kubernetes.io/name: envoy
      ports:
        - protocol: TCP
          port: 9000
