kubernetes/apps/auth/authentik/networkpolicys/worker/auth-authentik-worker-allow-ig-from-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: auth-authentik-worker-allow-ig-from-host
  namespace: auth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - protocol: TCP
              port: "9090"
